--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#332E09",
+    "titleBar.activeBackground": "#47400D",
+    "titleBar.activeForeground": "#FCFAEE"
+  }
 }
